--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -353,7 +353,7 @@ Blocks Styles
 				        flex-direction: column;
 				width: 100%;
 }
-.editor-styles-wrapper .acf-block-preview .container, .editor-styles-wrapper .acf-block-preview .slider-links .swiper-container {
+.editor-styles-wrapper .acf-block-preview .container {
 				max-width: 2100px;
 				margin: 0 auto;
 				padding: 0 90px;
@@ -1569,7 +1569,7 @@ Blocks Styles
 				position: absolute;
 				top: -84px;
 }
-.editor-styles-wrapper .acf-block-preview .contact-form .container, .editor-styles-wrapper .acf-block-preview .contact-form .slider-links .swiper-container, .editor-styles-wrapper .acf-block-preview .slider-links .contact-form .swiper-container {
+.editor-styles-wrapper .acf-block-preview .contact-form .container {
 				max-width: 1020px;
 }
 .editor-styles-wrapper .acf-block-preview .contact-form .title {
@@ -1698,7 +1698,7 @@ Blocks Styles
 								height: 100px;
 				}
 }
-.editor-styles-wrapper .acf-block-preview .header .container, .editor-styles-wrapper .acf-block-preview .header .slider-links .swiper-container, .editor-styles-wrapper .acf-block-preview .slider-links .header .swiper-container {
+.editor-styles-wrapper .acf-block-preview .header .container {
 				position: relative;
 }
 .editor-styles-wrapper .acf-block-preview .header .site-logo {
@@ -1733,7 +1733,7 @@ Blocks Styles
 .home .editor-styles-wrapper .acf-block-preview .header .site-logo #logo_text path {
 				fill: #ffffff;
 }
-.editor-styles-wrapper .acf-block-preview .header .container:before, .editor-styles-wrapper .acf-block-preview .header .slider-links .swiper-container:before, .editor-styles-wrapper .acf-block-preview .slider-links .header .swiper-container:before {
+.editor-styles-wrapper .acf-block-preview .header .container:before {
 				width: 90px;
 				height: 100px;
 				position: absolute;
@@ -1755,17 +1755,17 @@ Blocks Styles
 				border-radius: 0 0 10px 10px;
 }
 @media only screen and (max-width: 1050px) {
-				.editor-styles-wrapper .acf-block-preview .header .container:before, .editor-styles-wrapper .acf-block-preview .header .slider-links .swiper-container:before, .editor-styles-wrapper .acf-block-preview .slider-links .header .swiper-container:before {
+				.editor-styles-wrapper .acf-block-preview .header .container:before {
 								z-index: 1;
 								top: 0;
 								height: 100px;
 				}
-				body:not(.home) .editor-styles-wrapper .acf-block-preview .header .container:before, body:not(.home) .editor-styles-wrapper .acf-block-preview .header .slider-links .swiper-container:before, body:not(.home) .editor-styles-wrapper .acf-block-preview .slider-links .header .swiper-container:before {
+				body:not(.home) .editor-styles-wrapper .acf-block-preview .header .container:before {
 								width: calc(100vw - 20px);
 								opacity: 1;
 				}
 }
-.scrolled .editor-styles-wrapper .acf-block-preview .header .container:before, .scrolled .editor-styles-wrapper .acf-block-preview .header .slider-links .swiper-container:before, .scrolled .editor-styles-wrapper .acf-block-preview .slider-links .header .swiper-container:before {
+.scrolled .editor-styles-wrapper .acf-block-preview .header .container:before {
 				width: 100vw;
 				opacity: 1;
 }
@@ -1781,12 +1781,12 @@ Blocks Styles
 .scrolled .editor-styles-wrapper .acf-block-preview .header .site-logo svg g path {
 				fill: #000;
 }
-.menuopen .editor-styles-wrapper .acf-block-preview .header .container:before, .menuopen .editor-styles-wrapper .acf-block-preview .header .slider-links .swiper-container:before, .menuopen .editor-styles-wrapper .acf-block-preview .slider-links .header .swiper-container:before {
+.menuopen .editor-styles-wrapper .acf-block-preview .header .container:before {
 				width: calc(100vw - 20px);
 				opacity: 1;
 }
 @media only screen and (max-width: 1050px) {
-				.menuopen .editor-styles-wrapper .acf-block-preview .header .container:before, .menuopen .editor-styles-wrapper .acf-block-preview .header .slider-links .swiper-container:before, .menuopen .editor-styles-wrapper .acf-block-preview .slider-links .header .swiper-container:before {
+				.menuopen .editor-styles-wrapper .acf-block-preview .header .container:before {
 								opacity: 0;
 				}
 }
@@ -1857,18 +1857,18 @@ Blocks Styles
 				color: #ffffff;
 				margin-top: -5px;
 }
-.editor-styles-wrapper .acf-block-preview .site-footer .container, .editor-styles-wrapper .acf-block-preview .site-footer .slider-links .swiper-container, .editor-styles-wrapper .acf-block-preview .slider-links .site-footer .swiper-container {
+.editor-styles-wrapper .acf-block-preview .site-footer .container {
 				padding-top: clamp(35px, -3.4px + 0.064 * 100vw, 70px);
 				padding-bottom: clamp(35px, -3.4px + 0.064 * 100vw, 70px);
 }
 @media only screen and (max-width: 1050px) {
-				.editor-styles-wrapper .acf-block-preview .site-footer .container, .editor-styles-wrapper .acf-block-preview .site-footer .slider-links .swiper-container, .editor-styles-wrapper .acf-block-preview .slider-links .site-footer .swiper-container {
+				.editor-styles-wrapper .acf-block-preview .site-footer .container {
 								-ms-flex-wrap: wrap;
 								    flex-wrap: wrap;
 				}
 }
 @media only screen and (max-width: 768px) {
-				.editor-styles-wrapper .acf-block-preview .site-footer .container, .editor-styles-wrapper .acf-block-preview .site-footer .slider-links .swiper-container, .editor-styles-wrapper .acf-block-preview .slider-links .site-footer .swiper-container {
+				.editor-styles-wrapper .acf-block-preview .site-footer .container {
 								-webkit-box-orient: vertical;
 								-webkit-box-direction: normal;
 								    -ms-flex-direction: column;
@@ -2596,7 +2596,7 @@ Blocks Styles
 .editor-styles-wrapper .acf-block-preview .default_block .default_block > * {
 				margin-left: 0;
 }
-.editor-styles-wrapper .acf-block-preview .default_block .container, .editor-styles-wrapper .acf-block-preview .default_block .slider-links .swiper-container, .editor-styles-wrapper .acf-block-preview .slider-links .default_block .swiper-container {
+.editor-styles-wrapper .acf-block-preview .default_block .container {
 				padding: 0;
 }
 .editor-styles-wrapper .acf-block-preview .default_block.list {
@@ -3041,83 +3041,54 @@ Blocks Styles
 				height: 20px;
 }
 .editor-styles-wrapper .acf-block-preview .slider-links {
+				padding-top: clamp(84px, 84px + 0 * 100vw, 84px);
+				padding-bottom: clamp(84px, -21.6px + 0.176 * 100vw, 181px);
 				position: relative;
-				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
-				padding-bottom: clamp(60px, -93px + 0.255 * 100vw, 200px);
+				overflow: hidden;
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-wrapper {
+.editor-styles-wrapper .acf-block-preview .slider-links .anchor {
+				position: absolute;
+				top: -84px;
+}
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont {
+				position: relative;
+}
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .slider-partners {
+				margin-top: 44px;
 				text-align: center;
-				-webkit-box-align: center;
-				    -ms-flex-align: center;
-				        align-items: center;
-				-webkit-box-pack: justify;
-				    -ms-flex-pack: justify;
-				        justify-content: space-between;
-				position: relative;
-				margin-bottom: 40px;
-				z-index: 1;
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-wrapper .item {
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .slider-partners .item {
 				text-align: center;
 				padding: 0 20px;
 				/* @include responsive('tablet-v') {
-				        padding: 0 25px;
-				    } */
+				    padding: 0 25px;
+				} */
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-wrapper .item img {
-				width: 200px;
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .slider-partners .item img {
+				width: 300px;
 				height: 120px;
 				-o-object-fit: contain;
 				   object-fit: contain;
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-slide {
-				width: 33.333%;
-				-webkit-box-sizing: border-box;
-				        box-sizing: border-box;
-				padding: 0 15px;
-}
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-slide img {
-				max-width: 320px;
-				margin-bottom: 20px;
-}
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-slide p {
-				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
-				font-weight: 400;
-				line-height: 1.4;
-				color: #231F20;
-				font-style: italic;
-}
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-slide a {
-				color: #231F20;
-				text-decoration: none;
-}
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-prev,
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-next {
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev,
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-next {
 				background: url(images/icons/arrow-slider.png) no-repeat center/contain;
-				width: 29px;
-				height: 29px;
+				width: 25px;
+				height: 25px;
 				display: block;
 				position: absolute;
 				cursor: pointer;
 				z-index: 3;
-				-webkit-transition: all 3ms ease-in-out;
-				transition: all 3ms ease-in-out;
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-prev:hover,
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-next:hover {
-				scale: 1.1;
-				-webkit-transition: all 3ms ease-in-out;
-				transition: all 3ms ease-in-out;
-}
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-prev {
-				-webkit-transform: rotate(180deg);
-				        transform: rotate(180deg);
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev {
+				-webkit-transform: rotate(-180deg);
+				        transform: rotate(-180deg);
 				top: 26%;
-				left: 3%;
+				left: -35px;
 				z-index: 3;
 }
 @media only screen and (max-width: 1260px) {
-				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-prev {
+				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev {
 								width: 20px;
 								height: 20px;
 								top: 88%;
@@ -3125,19 +3096,17 @@ Blocks Styles
 				}
 }
 @media only screen and (max-width: 900px) {
-				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-prev {
+				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev {
 								top: 40%;
 				}
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-next {
-				-webkit-transform: rotate(0deg);
-				        transform: rotate(0deg);
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-next {
 				top: 26%;
-				right: 3%;
+				right: -35px;
 				z-index: 3;
 }
 @media only screen and (max-width: 1260px) {
-				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-next {
+				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-next {
 								width: 20px;
 								height: 20px;
 								top: 88%;
@@ -3145,14 +3114,24 @@ Blocks Styles
 				}
 }
 @media only screen and (max-width: 900px) {
-				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-button-next {
+				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-next {
 								top: 40%;
 				}
 }
-.editor-styles-wrapper .acf-block-preview .slider-links.swiper {
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners.swiper {
 				position: unset;
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-wrapper {
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners.swiper .item a {
+				display: block;
+				text-decoration: none;
+}
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners.swiper .item a p {
+				color: #000;
+				font-size: 35px;
+				width: 348px;
+				max-width: 100%;
+}
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-wrapper {
 				text-align: center;
 				-webkit-box-align: center;
 				    -ms-flex-align: center;
@@ -3163,29 +3142,25 @@ Blocks Styles
 				position: relative;
 				margin-bottom: 40px;
 				z-index: 1;
-				width: 100vw;
-				max-width: 100vw;
-				overflow: visible;
 }
 @media only screen and (max-width: 900px) {
-				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-wrapper {
+				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-wrapper {
 								gap: 0;
 								margin-bottom: 0;
 				}
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-pagination {
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination {
 				width: 100%;
 				margin: 0 auto;
 				height: 50px;
-				display: block;
-				text-align: center;
+				display: inline;
 }
 @media only screen and (max-width: 768px) {
-				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-pagination {
+				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination {
 								display: none;
 				}
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-pagination .swiper-pagination-bullet {
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination .swiper-pagination-bullet {
 				width: 10px;
 				height: 10px;
 				margin: 0 15px;
@@ -3195,7 +3170,7 @@ Blocks Styles
 				background-color: #DFEDF3;
 				border-radius: 10px;
 }
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
 				background-color: #54A8C7;
 }
 .editor-styles-wrapper .wp-block {
