--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -1,164 +1,144 @@
 .slider-links {
+    padding-top: rv(84px, 84px);
+    padding-bottom: rv(84px, 181px);
     position: relative;
-    padding-top: rv(60px, 100px);
-    padding-bottom: rv(60px, 200px);
+    overflow: hidden;
 
-    .swiper-container {
-        @extend .container;
+    .anchor {
+        position: absolute;
+        top: -84px;
     }
 
-
-    .swiper-wrapper {
-        text-align: center;
-        align-items: center;
-        justify-content: space-between;
+    .swiper-cont {
         position: relative;
-        margin-bottom: 40px;
-        z-index: 1;
 
-        .item {
+        .slider-partners {
+            margin-top: 44px;
             text-align: center;
-            padding: 0 20px;
 
-            /* @include responsive('tablet-v') {
+            .item {
+                text-align: center;
+                padding: 0 20px;
+
+                /* @include responsive('tablet-v') {
                     padding: 0 25px;
                 } */
 
-            img {
-                width: 200px;
-                height: 120px;
-                object-fit: contain;
+                img {
+                    width: 300px;
+                    height: 120px;
+                    object-fit: contain;
+                }
+            }
+        }
+
+        .swiper.slider-partners {
+
+            .swiper-button-prev,
+            .swiper-button-next {
+                background: url(images/icons/arrow-slider.png) no-repeat center/contain;
+                width: 25px;
+                height: 25px;
+                display: block;
+                position: absolute;
+                cursor: pointer;
+                z-index: 3;
+            }
+
+            .swiper-button-prev {
+                transform: rotate(-180deg);
+                top: 26%;
+                left: -35px;
+                z-index: 3;
+
+                @include responsive('desktop-m') {
+                    width: 20px;
+                    height: 20px;
+                    top: 88%;
+                    left: 0;
+                }
+
+                @include responsive('tablet-v') {
+                    top: 40%;
+                }
+            }
+
+            .swiper-button-next {
+
+                top: 26%;
+                right: -35px;
+                z-index: 3;
+
+                @include responsive('desktop-m') {
+                    width: 20px;
+                    height: 20px;
+                    top: 88%;
+                    right: 0;
+                }
+
+                @include responsive('tablet-v') {
+                    top: 40%;
+                }
+            }
+
+            &.swiper {
+                position: unset;
+
+                .item {
+                    a {
+                        display: block;
+                        text-decoration: none;
+
+                        p {
+                            color: $black;
+                            font-size: 35px;
+                            width: 348px;
+                            max-width: 100%;
+                        }
+                    }
+                }
+            }
+
+            .swiper-wrapper {
+                text-align: center;
+                align-items: center;
+                justify-content: space-between;
+                position: relative;
+                margin-bottom: 40px;
+                z-index: 1;
+                //gap: 40px;
+
+                @include responsive('tablet-v') {
+                    gap: 0;
+                    margin-bottom: 0;
+                }
+            }
+
+            .swiper-pagination {
+                width: 100%;
+                margin: 0 auto;
+                height: 50px;
+                display: inline;
+
+                @include responsive('mobile-h') {
+                    display: none;
+                }
+
+                .swiper-pagination-bullet {
+                    width: 10px;
+                    height: 10px;
+                    margin: 0 15px;
+                    display: inline-block;
+                    cursor: pointer;
+                    vertical-align: middle;
+                    background-color: $secondary-blue;
+                    border-radius: 10px;
+
+                    &.swiper-pagination-bullet-active {
+                        background-color: $secondary-color;
+                    }
+                }
             }
         }
     }
-
-    .swiper-slide {
-        width: 33.333%;
-        box-sizing: border-box;
-        padding: 0 15px;
-
-        img {
-            max-width: 320px;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: rv(18px, 24px);
-            font-weight: 400;
-            line-height: 1.4;
-            color: $light-black;
-            font-style: italic;
-        }
-
-        a {
-            color: $light-black;
-            text-decoration: none;
-        }
-    }
-
-
-
-    .swiper-button-prev,
-    .swiper-button-next {
-        background: url(images/icons/arrow-slider.png) no-repeat center/contain;
-        width: 29px;
-        height: 29px;
-        display: block;
-        position: absolute;
-        cursor: pointer;
-        z-index: 3;
-        transition: all 3ms ease-in-out;
-
-        &:hover {
-            scale: (1.1);
-            transition: all 3ms ease-in-out;
-
-        }
-    }
-
-    .swiper-button-prev {
-        transform: rotate(180deg);
-        top: 26%;
-        left: 3%;
-        z-index: 3;
-
-        @include responsive('desktop-m') {
-            width: 20px;
-            height: 20px;
-            top: 88%;
-            left: 0;
-        }
-
-        @include responsive('tablet-v') {
-            top: 40%;
-        }
-    }
-
-    .swiper-button-next {
-        transform: rotate(0deg);
-        top: 26%;
-        right: 3%;
-        z-index: 3;
-
-        @include responsive('desktop-m') {
-            width: 20px;
-            height: 20px;
-            top: 88%;
-            right: 0;
-        }
-
-        @include responsive('tablet-v') {
-            top: 40%;
-        }
-    }
-
-    &.swiper {
-        position: unset;
-    }
-
-    .swiper-wrapper {
-        text-align: center;
-        align-items: center;
-        justify-content: space-between;
-        position: relative;
-        margin-bottom: 40px;
-        z-index: 1;
-        //gap: 40px;
-        width: 100vw;
-        max-width: 100vw;
-        overflow: visible;
-
-        @include responsive('tablet-v') {
-            gap: 0;
-            margin-bottom: 0;
-        }
-    }
-
-    .swiper-pagination {
-        width: 100%;
-        margin: 0 auto;
-        height: 50px;
-        display: block;
-        text-align: center;
-
-        @include responsive('mobile-h') {
-            display: none;
-        }
-
-        .swiper-pagination-bullet {
-            width: 10px;
-            height: 10px;
-            margin: 0 15px;
-            display: inline-block;
-            cursor: pointer;
-            vertical-align: middle;
-            background-color: $secondary-blue;
-            border-radius: 10px;
-
-            &.swiper-pagination-bullet-active {
-                background-color: $secondary-color;
-            }
-        }
-    }
-
 }
