--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -2821,10 +2821,6 @@ Blocks Styles
 				cursor: pointer;
 				-webkit-transition: all 0.3s ease;
 				transition: all 0.3s ease;
-				/*   &.js-open {
-				    display: flex;
-				    flex-direction: column;
-				} */
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__item:last-child {
 				border-bottom: none;
@@ -2833,12 +2829,16 @@ Blocks Styles
 				-webkit-transform: translate(10px);
 				        transform: translate(10px);
 }
+.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__item.js-open .accordion__question::after {
+				-webkit-transform: rotate(-180deg);
+				        transform: rotate(-180deg);
+}
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__answer {
 				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
 				font-weight: 400;
 				line-height: 1.4;
 				color: #ffffff;
-				padding-top: 10px;
+				padding-top: 20px;
 				font-style: italic;
 				display: none;
 }
@@ -3069,6 +3069,7 @@ Blocks Styles
 				height: 120px;
 				-o-object-fit: contain;
 				   object-fit: contain;
+				float: left;
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev,
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-next {
