--- a/wp-content/themes/gtoken/scss/blocks/_faqs.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_faqs.scss
@@ -39,10 +39,12 @@
             }
         }
 
-        /*   &.js-open {
-            display: flex;
-            flex-direction: column;
-        } */
+        &.js-open {
+            .accordion__question::after {
+                transform: rotate(-180deg);
+
+            }
+        }
     }
 
     .accordion__answer {
@@ -50,7 +52,7 @@
         font-weight: 400;
         line-height: 1.4;
         color: $white;
-        padding-top: 10px;
+        padding-top: 20px;
         font-style: italic;
         display: none;
     }
