--- a/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_slider-links.scss
@@ -28,6 +28,7 @@
                     width: 300px;
                     height: 120px;
                     object-fit: contain;
+                    float: left;
                 }
             }
         }
