--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -2849,6 +2849,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				font-weight: 400;
 				line-height: 1;
 				font-style: italic;
+				padding: 30px 30px 30px 64px;
 				display: -webkit-box;
 				display: -ms-flexbox;
 				display: flex;
@@ -2867,7 +2868,6 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				height: 29px;
 }
 .accordion--faqs .accordion__item {
-				padding: 30px 30px 30px 64px;
 				border-bottom: 1px solid #FB3BA5;
 				width: 100%;
 				cursor: pointer;
@@ -2890,7 +2890,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				font-weight: 400;
 				line-height: 1.4;
 				color: #ffffff;
-				padding-top: 20px;
+				padding: 0 30px 20px 64px;
 				font-style: italic;
 				display: none;
 }
