--- a/wp-content/themes/gtoken/scss/hero/_home.scss
+++ b/wp-content/themes/gtoken/scss/hero/_home.scss
@@ -40,7 +40,7 @@
 
             .title {
                 color: $white;
-                font-family: $secondary-font;
+                font-family: $druk-condensed;
                 font-size: rv(60px, 281px);
                 line-height: 1;
                 font-weight: 500;
