--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -56,27 +56,10 @@ Aplica transformX(0px), transformY(0px) y opacity 1 para hacer aparecer el objec
 Se usa igual que fade, pero crea un loop para animar los elementos de forma ordenada
 */
 /* Text Block Custom Style */
-/* @font-face {
-    font-family: 'Playfair Display';
-    src: url('fonts/PlayfairDisplay-Black.eot');
-    src: url('fonts/PlayfairDisplay-Black.eot?#iefix') format('embedded-opentype'),
-        url('fonts/PlayfairDisplay-Black.woff2') format('woff2'),
-        url('fonts/PlayfairDisplay-Black.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
 @font-face {
-    font-family: 'Playfair Display';
-    src: url('fonts/PlayfairDisplay-BlackItalic.eot');
-    src: url('fonts/PlayfairDisplay-BlackItalic.eot?#iefix') format('embedded-opentype'),
-        url('fonts/PlayfairDisplay-BlackItalic.woff2') format('woff2'),
-        url('fonts/PlayfairDisplay-BlackItalic.woff') format('woff');
-    font-weight: 900;
-    font-style: italic;
-    font-display: swap;
-} */
+				font-family: "druk-condensed";
+				src: url("./fonts/DrukCond-Super.woff2") format("woff2"), url("./fonts/DrukCond-Super.ttf") format("truetype");
+}
 html {
 				-webkit-box-sizing: border-box;
 				        box-sizing: border-box;
@@ -1620,7 +1603,7 @@ select option {
 }
 .hero--home .hero__text .title {
 				color: #ffffff;
-				font-family: "Bebas Neue", sans-serif;
+				font-family: "druk-condensed", "Futura", Arial, sans-serif;
 				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
 				line-height: 1;
 				font-weight: 500;
