--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -1640,7 +1640,7 @@ Blocks Styles
 				        transform: var(--fade-transform, translateX(-100px) translateY(0));
 				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-				font-size: 100px;
+				font-size: 230px;
 }
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__text p {
 				font-size: clamp(20px, 0.2px + 0.033 * 100vw, 38px);
@@ -2660,8 +2660,8 @@ Blocks Styles
 				margin-top: clamp(30px, -46.2px + 0.127 * 100vw, 100px);
 }
 .editor-styles-wrapper .acf-block-preview .text-papper {
-				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
-				padding-bottom: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
+				padding-top: clamp(60px, -93px + 0.255 * 100vw, 200px);
+				padding-bottom: clamp(60px, 5.4px + 0.091 * 100vw, 110px);
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content {
 				display: -webkit-box;
@@ -2671,7 +2671,7 @@ Blocks Styles
 				-webkit-box-direction: normal;
 				    -ms-flex-direction: column;
 				        flex-direction: column;
-				gap: 40px;
+				gap: 60px;
 				-webkit-box-pack: center;
 				    -ms-flex-pack: center;
 				        justify-content: center;
@@ -2754,7 +2754,7 @@ Blocks Styles
 .editor-styles-wrapper .acf-block-preview .text-papper .content__link a {
 				font-size: clamp(26px, -11.2px + 0.062 * 100vw, 60px);
 				text-decoration: none;
-				color: #231F20;
+				color: #3ACBED;
 				text-transform: capitalize;
 				font-weight: 400;
 				line-height: 1;
@@ -2772,6 +2772,7 @@ Blocks Styles
 .editor-styles-wrapper .acf-block-preview .accordion--faqs {
 				padding-top: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
 				padding-bottom: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
+				position: relative;
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__question {
 				color: #FB3BA5;
@@ -2824,8 +2825,20 @@ Blocks Styles
 				font-style: italic;
 				display: none;
 }
+.editor-styles-wrapper .acf-block-preview .accordion--faqs::before {
+				content: "";
+				background: url(images/icons/barra.svg) no-repeat center/contain;
+				display: inline-block;
+				position: absolute;
+				top: auto;
+				bottom: 100%;
+				left: 0;
+				width: 68%;
+				height: 14px;
+}
 .editor-styles-wrapper .acf-block-preview .image-text {
 				position: relative;
+				padding-bottom: clamp(60px, 5.4px + 0.091 * 100vw, 110px);
 }
 .editor-styles-wrapper .acf-block-preview .image-text::after {
 				content: "";
@@ -2853,7 +2866,7 @@ Blocks Styles
 				    -ms-flex-direction: column;
 				        flex-direction: column;
 				gap: 40px;
-				width: 856px;
+				width: 690px;
 				max-width: 100%;
 }
 .editor-styles-wrapper .acf-block-preview .image-text__image {
@@ -2893,11 +2906,20 @@ Blocks Styles
 				   object-fit: cover;
 }
 .editor-styles-wrapper .acf-block-preview .image-text__title {
-				font-size: clamp(18px, -22.2px + 0.067 * 100vw, 55px);
-				font-weight: 700;
+				font-size: clamp(36px, -6.6px + 0.071 * 100vw, 75px);
+				font-weight: 400;
 				font-family: "Bebas Neue", sans-serif;
 				color: #ffffff;
-				margin-top: 20px;
+				margin-top: 70px;
+				line-height: 1;
+				max-width: 480px;
+}
+.editor-styles-wrapper .acf-block-preview .image-text__text {
+				font-family: "Bitter", serif;
+				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
+				font-style: italic;
+				line-height: 1.4;
+				color: #231F20;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid {
 				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
@@ -2921,14 +2943,14 @@ Blocks Styles
 				font-weight: 500;
 				line-height: 1;
 				color: #231F20;
-				font-family: "Bebas Neue", sans-serif;
+				font-family: "druk-condensed", "Futura", Arial, sans-serif;
 				max-height: 240px;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
 				font-size: clamp(25px, -35px + 0.1 * 100vw, 80px);
 				font-weight: 500;
 				color: #ffffff;
-				font-family: "Bebas Neue", sans-serif;
+				font-family: "druk-condensed", "Futura", Arial, sans-serif;
 				line-height: 1;
 				max-width: 200px;
 }
@@ -2992,12 +3014,13 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__item .number_content {
 				color: #ffffff;
-				font-size: clamp(18px, 13.8px + 0.007 * 100vw, 22px);
+				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
 				font-style: italic;
+				line-height: 1.4;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__link {
 				padding-top: 40px;
-				font-size: clamp(24px, 10.8px + 0.022 * 100vw, 36px);
+				font-size: clamp(24px, -15px + 0.065 * 100vw, 60px);
 				font-style: italic;
 				font-weight: 400;
 				color: #ffffff;
@@ -3010,7 +3033,7 @@ Blocks Styles
 				        transition-delay: 0.8s;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__link a {
-				color: #000;
+				color: #ffffff;
 				text-decoration: none;
 				text-transform: capitalize;
 }
@@ -3019,8 +3042,8 @@ Blocks Styles
 				background: url(images/icons/arrow-select.png) no-repeat center/contain;
 				margin-right: 20px;
 				display: inline-block;
-				width: 20px;
-				height: 20px;
+				width: 29px;
+				height: 29px;
 }
 .editor-styles-wrapper .acf-block-preview .slider-links {
 				padding-top: clamp(84px, 84px + 0 * 100vw, 84px);
@@ -3053,6 +3076,17 @@ Blocks Styles
 				   object-fit: contain;
 				float: left;
 }
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .slider-partners .swiper-slide {
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-pack: center;
+				    -ms-flex-pack: center;
+				        justify-content: center;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
+}
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev,
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-next {
 				background: url(images/icons/arrow-slider.png) no-repeat center/contain;
@@ -3062,6 +3096,12 @@ Blocks Styles
 				position: absolute;
 				cursor: pointer;
 				z-index: 3;
+}
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev:hover,
+.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-next:hover {
+				scale: 1.1;
+				-webkit-transition: all 3ms ease;
+				transition: all 3ms ease;
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev {
 				-webkit-transform: rotate(-180deg);
@@ -3110,9 +3150,10 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners.swiper .item a p {
 				color: #000;
-				font-size: 35px;
+				font-size: clamp(20px, 3.8px + 0.027 * 100vw, 35px);
 				width: 348px;
 				max-width: 100%;
+				text-align: left;
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-wrapper {
 				text-align: center;
@@ -3137,6 +3178,7 @@ Blocks Styles
 				margin: 0 auto;
 				height: 50px;
 				display: inline;
+				display: none;
 }
 @media only screen and (max-width: 768px) {
 				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination {
