--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -1,12 +1,12 @@
 .text-papper {
-    padding-top: rv(60px, 100px);
-    padding-bottom: rv(60px, 100px);
+    padding-top: rv(60px, 200px);
+    padding-bottom: rv(60px, 110px);
 
 
     .content {
         display: flex;
         flex-direction: column;
-        gap: 40px;
+        gap: 60px;
         justify-content: center;
         align-items: flex-start;
 
@@ -66,7 +66,7 @@
             a {
                 font-size: rv(26px, 60px);
                 text-decoration: none;
-                color: $light-black;
+                color: $light-blue-color;
                 text-transform: capitalize;
                 font-weight: 400;
                 line-height: 1;
