--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -2712,8 +2712,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 
 .text-papper {
-				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
-				padding-bottom: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
+				padding-top: clamp(60px, -93px + 0.255 * 100vw, 200px);
+				padding-bottom: clamp(60px, 5.4px + 0.091 * 100vw, 110px);
 }
 .text-papper .content {
 				display: -webkit-box;
@@ -2723,7 +2723,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				-webkit-box-direction: normal;
 				    -ms-flex-direction: column;
 				        flex-direction: column;
-				gap: 40px;
+				gap: 60px;
 				-webkit-box-pack: center;
 				    -ms-flex-pack: center;
 				        justify-content: center;
@@ -2806,7 +2806,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 .text-papper .content__link a {
 				font-size: clamp(26px, -11.2px + 0.062 * 100vw, 60px);
 				text-decoration: none;
-				color: #231F20;
+				color: #3ACBED;
 				text-transform: capitalize;
 				font-weight: 400;
 				line-height: 1;
@@ -2825,6 +2825,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 .accordion--faqs {
 				padding-top: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
 				padding-bottom: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
+				position: relative;
 }
 .accordion--faqs .accordion__question {
 				color: #FB3BA5;
@@ -2877,9 +2878,21 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				font-style: italic;
 				display: none;
 }
+.accordion--faqs::before {
+				content: "";
+				background: url(images/icons/barra.svg) no-repeat center/contain;
+				display: inline-block;
+				position: absolute;
+				top: auto;
+				bottom: 100%;
+				left: 0;
+				width: 68%;
+				height: 14px;
+}
 
 .image-text {
 				position: relative;
+				padding-bottom: clamp(60px, 5.4px + 0.091 * 100vw, 110px);
 }
 .image-text::after {
 				content: "";
@@ -2907,7 +2920,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				    -ms-flex-direction: column;
 				        flex-direction: column;
 				gap: 40px;
-				width: 856px;
+				width: 690px;
 				max-width: 100%;
 }
 .image-text__image {
@@ -2947,11 +2960,20 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				   object-fit: cover;
 }
 .image-text__title {
-				font-size: clamp(18px, -22.2px + 0.067 * 100vw, 55px);
-				font-weight: 700;
+				font-size: clamp(36px, -6.6px + 0.071 * 100vw, 75px);
+				font-weight: 400;
 				font-family: "Bebas Neue", sans-serif;
 				color: #ffffff;
-				margin-top: 20px;
+				margin-top: 70px;
+				line-height: 1;
+				max-width: 480px;
+}
+.image-text__text {
+				font-family: "Bitter", serif;
+				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
+				font-style: italic;
+				line-height: 1.4;
+				color: #231F20;
 }
 
 .number_grid {
@@ -2976,14 +2998,14 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				font-weight: 500;
 				line-height: 1;
 				color: #231F20;
-				font-family: "Bebas Neue", sans-serif;
+				font-family: "druk-condensed", "Futura", Arial, sans-serif;
 				max-height: 240px;
 }
 .number_grid__cont .number_text {
 				font-size: clamp(25px, -35px + 0.1 * 100vw, 80px);
 				font-weight: 500;
 				color: #ffffff;
-				font-family: "Bebas Neue", sans-serif;
+				font-family: "druk-condensed", "Futura", Arial, sans-serif;
 				line-height: 1;
 				max-width: 200px;
 }
@@ -3047,12 +3069,13 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 .number_grid__item .number_content {
 				color: #ffffff;
-				font-size: clamp(18px, 13.8px + 0.007 * 100vw, 22px);
+				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
 				font-style: italic;
+				line-height: 1.4;
 }
 .number_grid__link {
 				padding-top: 40px;
-				font-size: clamp(24px, 10.8px + 0.022 * 100vw, 36px);
+				font-size: clamp(24px, -15px + 0.065 * 100vw, 60px);
 				font-style: italic;
 				font-weight: 400;
 				color: #ffffff;
@@ -3065,7 +3088,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				        transition-delay: 0.8s;
 }
 .number_grid__link a {
-				color: #000;
+				color: #ffffff;
 				text-decoration: none;
 				text-transform: capitalize;
 }
@@ -3074,8 +3097,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				background: url(images/icons/arrow-select.png) no-repeat center/contain;
 				margin-right: 20px;
 				display: inline-block;
-				width: 20px;
-				height: 20px;
+				width: 29px;
+				height: 29px;
 }
 
 .slider-links {
@@ -3109,6 +3132,17 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				   object-fit: contain;
 				float: left;
 }
+.slider-links .swiper-cont .slider-partners .swiper-slide {
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-pack: center;
+				    -ms-flex-pack: center;
+				        justify-content: center;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
+}
 .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev,
 .slider-links .swiper-cont .swiper.slider-partners .swiper-button-next {
 				background: url(images/icons/arrow-slider.png) no-repeat center/contain;
@@ -3118,6 +3152,12 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				position: absolute;
 				cursor: pointer;
 				z-index: 3;
+}
+.slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev:hover,
+.slider-links .swiper-cont .swiper.slider-partners .swiper-button-next:hover {
+				scale: 1.1;
+				-webkit-transition: all 3ms ease;
+				transition: all 3ms ease;
 }
 .slider-links .swiper-cont .swiper.slider-partners .swiper-button-prev {
 				-webkit-transform: rotate(-180deg);
@@ -3166,9 +3206,10 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 .slider-links .swiper-cont .swiper.slider-partners.swiper .item a p {
 				color: #000;
-				font-size: 35px;
+				font-size: clamp(20px, 3.8px + 0.027 * 100vw, 35px);
 				width: 348px;
 				max-width: 100%;
+				text-align: left;
 }
 .slider-links .swiper-cont .swiper.slider-partners .swiper-wrapper {
 				text-align: center;
@@ -3193,6 +3234,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				margin: 0 auto;
 				height: 50px;
 				display: inline;
+				display: none;
 }
 @media only screen and (max-width: 768px) {
 				.slider-links .swiper-cont .swiper.slider-partners .swiper-pagination {
