--- a/wp-content/themes/gtoken/scss/base/_typography.scss
+++ b/wp-content/themes/gtoken/scss/base/_typography.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap');
 
 @font-face {
-    font-family: 'druk-condensed';
-    src: url('./fonts/DrukCond-Super.woff2') format('woff2'),
-        url('./fonts/DrukCond-Super.ttf') format('truetype')
+    font-family: 'Druk-Medium';
+    src: url('./fonts/Druk-Medium.woff2') format('woff2'),
+        url('./fonts/Druk-Medium.woff') format('truetype')
 }
