--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -124,8 +124,8 @@ Blocks Styles
 				--v0: 0;
 }
 @font-face {
-				font-family: "druk-condensed";
-				src: url("./fonts/DrukCond-Super.woff2") format("woff2"), url("./fonts/DrukCond-Super.ttf") format("truetype");
+				font-family: "Druk-Medium";
+				src: url("./fonts/Druk-Medium.woff2") format("woff2"), url("./fonts/Druk-Medium.woff") format("truetype");
 }
 .editor-styles-wrapper .acf-block-preview html {
 				-webkit-box-sizing: border-box;
@@ -1631,7 +1631,7 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__text .title {
 				color: #ffffff;
-				font-family: "druk-condensed", "Futura", Arial, sans-serif;
+				font-family: "Druk-Medium";
 				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
 				line-height: 1;
 				font-weight: 500;
@@ -1640,6 +1640,7 @@ Blocks Styles
 				        transform: var(--fade-transform, translateX(-100px) translateY(0));
 				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				letter-spacing: 20px;
 				font-size: 230px;
 }
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__text p {
@@ -2943,16 +2944,17 @@ Blocks Styles
 				font-weight: 500;
 				line-height: 1;
 				color: #231F20;
-				font-family: "druk-condensed", "Futura", Arial, sans-serif;
+				font-family: "Druk-Medium";
 				max-height: 240px;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
 				font-size: clamp(25px, -35px + 0.1 * 100vw, 80px);
 				font-weight: 500;
 				color: #ffffff;
-				font-family: "druk-condensed", "Futura", Arial, sans-serif;
+				font-family: "Druk-Medium";
 				line-height: 1;
 				max-width: 200px;
+				text-transform: uppercase;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__item {
 				width: 100%;
