--- a/wp-content/themes/gtoken/scss/abstracts/_variables.scss
+++ b/wp-content/themes/gtoken/scss/abstracts/_variables.scss
@@ -2,9 +2,7 @@
 $default-font: 'Bitter', serif !default;
 $secondary-font: 'Bebas Neue', sans-serif !default;
 $third-font: 'Courier Prime', monospace !default;
-$druk-thin-condensed: 'druk-thin-condensed', 'Futura', Arial, sans-serif; // TODO: No se utiliza creo. 
-$druk-condensed: 'druk-condensed', 'Futura', Arial, sans-serif;
-$druk-wide: 'druk-wide', 'Futura', Arial, sans-serif; // TODO: No se utiliza creo. 
+$druk: 'Druk-Medium';
 
 /* 
 font-family: 'Bebas Neue', sans-serif;
