--- a/wp-content/themes/gtoken/scss/hero/_home.scss
+++ b/wp-content/themes/gtoken/scss/hero/_home.scss
@@ -40,12 +40,13 @@
 
             .title {
                 color: $white;
-                font-family: $druk-condensed;
+                font-family: $druk;
                 font-size: rv(60px, 281px);
                 line-height: 1;
                 font-weight: 500;
                 //text-transform: uppercase;
                 @include fade(-100px, 0, true, 0);
+                letter-spacing: 20px;
 
                 @if editor() {
                     font-size: 230px;
